sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not enough arguments for constructor Array: (_length: Int)Array[Int].
Unspecified value parameter _length.
  var tab = new Array[Int];
            ^